recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value snowside
  snowside(levels-1, length/3)
  ^Koch:14: error: not found: value snowside
  snowside(levels-1, length/3)
  ^Koch:16: error: not found: value snowside
  snowside(levels-1, length/3)
  ^Koch:18: error: not found: value snowside
  snowside(levels-1, length/3)
  ^